--- a/lab-multiple-pages-scraping.ipynb
+++ b/lab-multiple-pages-scraping.ipynb
@@ -1512,51 +1512,455 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "id": "opening-planet",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\r\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t\\tSmooth - Santana\\r\\n\\t\\t\\t\\t\\t\\t\\t\\t\\t'"
+       "[<img alt=\"The Twist - Chubby Checker\" onerror=\"ImageLoadError(this)\" src=\"/f/items/0bb71902-c048-4637-a15f-d615bdb07e07.jpg\"/>,\n",
+       " <img alt=\"Smooth - Santana\" onerror=\"ImageLoadError(this)\" src=\"/f/items/b4fcce79-6050-4dfa-b995-74e18310812a.jpg\"/>,\n",
+       " <img alt=\"Mack the Knife - Bobby Darin\" onerror=\"ImageLoadError(this)\" src=\"/f/items/9a7fc74a-b09c-4b28-9aef-88d802677101.jpg\"/>,\n",
+       " <img alt=\"Mark Ronson, &amp;quot;Uptown Funk&amp;quot; (Feat. Bruno Mars)\" onerror=\"ImageLoadError(this)\" src=\"/f/items/0542a753-6f32-4221-ad5d-c08c0cf342d1.jpg\"/>,\n",
+       " <img alt=\"Leann Rimes - How Do I Live\" onerror=\"ImageLoadError(this)\" src=\"/f/items/571422e1-9cb5-4038-ac78-274e022374cb.jpg\"/>,\n",
+       " <img alt=\"Party Rock Anthem - LMFAO\" onerror=\"ImageLoadError(this)\" src=\"/f/items/37f1d360-4672-46a1-9508-3212044876f3.jpg\"/>,\n",
+       " <img alt=\"Black Eyed Peas - I Gotta Feeling\" onerror=\"ImageLoadError(this)\" src=\"/f/items-dl/abcfa338-af2a-4624-b77f-365250055e70.jpg\"/>,\n",
+       " <img alt=\"Macarena (Bayside Boys Mix) - Los Del Rio\" onerror=\"ImageLoadError(this)\" src=\"/f/items/185080dd-192d-4b54-a710-97fcc243d197.jpg\"/>,\n",
+       " <img alt=\"Shape of You - Ed Sheeran\" onerror=\"ImageLoadError(this)\" src=\"/f/items/08715ca3-31c2-49b9-944a-b19d94e51864.jpg\"/>,\n",
+       " <img alt=\"Physical (Olivia Newton John)\" onerror=\"ImageLoadError(this)\" src=\"/f/items/d8b9a80e-6013-40cf-9ac8-b957ed61d254.jpg\"/>,\n",
+       " <img alt=\"Debby Boone - You Light Up My Life\" onerror=\"ImageLoadError(this)\" src=\"/f/items/a07c1e59-93ba-47cb-9a6e-3651458e2343.jpg\"/>,\n",
+       " <img alt=\"Hey Jude - The Beatles\" onerror=\"ImageLoadError(this)\" src=\"/f/items/9f493d60-4c82-45d7-afa2-affc1d5e82bf.jpg\"/>,\n",
+       " <img alt=\"Closer - The Chainsmokers Ft. Hasley\" class=\"lazy-load\" data-src=\"/f/items/3f2869c5-203a-40c9-b172-5f5af132e417.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"We Belong Together - Mariah Carey\" class=\"lazy-load\" data-src=\"/f/items/cde899cf-3029-4cc9-847c-3db2ded1acd2.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Old Town Road (Remix) - Lil Nas X Ft. Billy Ray Cyrus\" class=\"lazy-load\" data-src=\"/f/items/144550d1-e763-4d37-81af-43b544cbac39.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Toni Braxton - Un-Break My Heart\" class=\"lazy-load\" data-src=\"/f/items/f8d97ee6-129d-4ab0-be81-511695d4f4a2.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Usher - Yeah! (Featuring Lil Jon and Ludacris)\" class=\"lazy-load\" data-src=\"/f/items/8b41dd58-1261-49f0-8ec4-62cad151cb14.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Bette Davis Eyes - Kim Carnes\" class=\"lazy-load\" data-src=\"/f/items/b996e678-01ec-4544-badd-46b577ef672e.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Girls Like You - Maroon 5, Cardi B\" class=\"lazy-load\" data-src=\"/f/items/16b2160d-3ae5-4397-8a66-c7ab3a32605a.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Endless Love - Diana Ross and Lionel Richie\" class=\"lazy-load\" data-src=\"/f/items/2f86970e-e705-4ae1-b6a4-dd365d04e86c.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Rod Stewart - Tonight&amp;#39;s the Night\" class=\"lazy-load\" data-src=\"/f/items/1d4079c1-c716-4a18-be91-c71f74403de5.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Foolish Games - Jewel\" class=\"lazy-load\" data-src=\"/f/items/a25133d0-6350-444d-b4d8-fe9759d7caed.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Circles - Post Malone\" class=\"lazy-load\" data-src=\"/f/items/fc28bea8-8358-41b4-a903-ef0e97f313a9.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"(Everything I Do) I Do It for You - Bryan Adams\" class=\"lazy-load\" data-src=\"/f/items/4792301c-e934-485d-b11a-584087972cbd.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"I&amp;#39;ll Make Love to You - Boyz II Men\" class=\"lazy-load\" data-src=\"/f/items/522cb3ab-85a4-45b9-a005-a6e6263c1bf1.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Percy Faith - Theme From &amp;quot;A Summer Place&amp;quot;\" class=\"lazy-load\" data-src=\"/f/items/f534111f-cec0-470e-b182-d7ab27cfd7f5.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"&amp;quot;Le Freak&amp;quot; - Chic\" class=\"lazy-load\" data-src=\"/f/items/e5ccf3ed-e683-4c33-92d0-c74de5befcae.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"How Deep Is Your Love - Bee Gees\" class=\"lazy-load\" data-src=\"/f/items/015b9827-e0f5-4f19-a90d-287b883f33d5.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Eye of the Tiger - Survivor\" class=\"lazy-load\" data-src=\"/f/items/6cfaf002-89fb-46b2-b53b-530aca47c10c.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"We Found Love - Rihanna Ft Calvin Harris\" class=\"lazy-load\" data-src=\"/f/items/4db7d1d7-3f71-4da5-9814-9692b9f803d1.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Flo Rida Ft. T-Pain - Low\" class=\"lazy-load\" data-src=\"/f/items/4e93bb97-7e5b-4584-a2ba-0b9089e4a451.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"I Just Want to Be Your Everything - Andy Gibb\" class=\"lazy-load\" data-src=\"/f/items/7d576ba3-2213-4a83-9100-983291753bff.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Too Close (Next)\" class=\"lazy-load\" data-src=\"/f/items/f79c9c71-24bd-4ec2-b652-fb29a3b4fc2b.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Sunflower (Spider-Man: Into the Spider-Verse) - Post Malone &amp;amp; Swae Lee\" class=\"lazy-load\" data-src=\"/f/items/9734a8ae-302f-4663-a192-46d7274836ba.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Every Breath You Take - The Police\" class=\"lazy-load\" data-src=\"/f/items/63ce7b93-8e54-4250-b8d4-9a487049717f.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Somebody That I Used to Know - Gotye Ft Kimbra\" class=\"lazy-load\" data-src=\"/f/items-dl/fcc7f953-1aa6-43c0-850a-3fc253d2716c.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Luis Fonsi Ft. Daddy Yankee and Justin Bieber - Despacito (Remix)\" class=\"lazy-load\" data-src=\"/f/items/8d634639-b4c6-4584-9a1a-8a636a940066.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Flashdance...What a Feeling - Irene Cara\" class=\"lazy-load\" data-src=\"/f/items/1f183d0a-34a4-4c72-a427-a49cd250e365.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Rolling in the Deep - Adele\" class=\"lazy-load\" data-src=\"/f/items/5a30c637-e8b9-40b0-9717-a3e2ce124e58.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>,\n",
+       " <img alt=\"Bobby Lewis - Tossin&amp;#39; and Turnin&amp;#39;\" class=\"lazy-load\" data-src=\"/f/items/b96f7073-ac85-46d8-ac52-f550c38ca024.jpg\" onerror=\"ImageLoadError(this)\" src=\"/i/loading.png\"/>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup.select(\"div:nth-child(2) > div > div.item-name\")[0].text"
+    "soup.select(\"div:nth-child(2) > img:nth-child(1)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "greenhouse-inquiry",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artist_lst = soup.select(\"span.chart-element__information__artist\")\n",
-    "song_lst = soup.select(\"span.chart-element__information__song\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "abroad-enough",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "artist = []\n",
-    "song = []\n",
+    "songs = []\n",
+    "pages_parsed = []\n",
+    "titles = []\n",
     "\n",
-    "len_artists = len(artist_lst)\n",
-    "\n",
-    "for i in range(len_artists):\n",
-    "    artist.append(soup.select(\"span.chart-element__information__artist\")[i].text)\n",
-    "    song.append(soup.select(\"span.chart-element__information__song\")[i].text)"
+    "for i in range(len(pages)): #to give us a run index\n",
+    "    pages_parsed.append(BeautifulSoup(pages[i].content,\"html.parser\")) # create soup for each page\n",
+    "    #to get songs\n",
+    "    songs_html= pages_parsed[i].select(\"div:nth-child(2) > img:nth-child(1)\")\n",
+    "    \n",
+    "    #loop through songs_html and select the song name \n",
+    "    for j in range(len(songs_html)):\n",
+    "        titles.append(songs_html[j].get_text())\n",
+    "titles\n",
+    "    "
    ]
   },
   {
